--- a/style.css
+++ b/style.css
@@ -32,12 +32,20 @@ body {
   visibility: hidden;
 }
 #overlay h1 {
+  margin-top: 3rem;
   font-size: 3rem;
+  color: #e1d5e7;
+  text-shadow: 0.1em 0.1em 0 #000;
 }
 #overlay p {
   font-size: 9rem;
+  background-image: linear-gradient(hsl(31, 100%, 80%), hsl(184, 35%, 62%));
+  /* background: -webkit-linear-gradient(#43c6ac, ##f8ffae); */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 #overlay button {
+  margin-top: 1rem;
   box-shadow: 4px 4px 0 #000;
 }
 
@@ -156,6 +164,9 @@ button {
   grid-area: play;
   background-color: hsl(31, 100%, 90%);
   border: 1px solid hsl(31, 100%, 60%);
+}
+button:hover {
+  background-color: hsl(31, 100%, 75%);
 }
 button:active {
   position: relative;
